--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
 {
-  "name": "nodemmo",
+  "name": "bc-game",
   "version": "1.0.0",
   "description": "MMO game made using Node.js",
   "main": "app.js",
   "dependencies": {
-    "express": "^4.13.4",
+    "express": "^4.16.0",
     "nodemailer": "^2.3.0",
-    "pg": "^4.4.6",
-    "socket.io": "^1.4.5"
+    "pg": "^6.1.2",
+    "socket.io": "^2.1.1"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ef4166/nodemmo.git"
-  },
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ef4166/nodemmo/issues"
-  },
-  "homepage": "https://github.com/ef4166/nodemmo#readme"
+  "license": "ISC"
 }
