--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "description": "MMO game made using Node.js",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "ejs": "^2.6.1",
+    "errorhandler": "^1.5.0",
     "express": "^4.16.0",
+    "express-session": "^1.15.6",
     "nodemailer": "^2.3.0",
+    "passport": "^0.4.0",
+    "passport-discord": "^0.1.3",
+    "path": "^0.12.7",
     "pg": "^6.1.2",
     "socket.io": "^2.1.1"
   },
