--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ejs": "^2.6.1",
     "errorhandler": "^1.5.0",
     "express": "^4.16.0",
+    "express-list-endpoints": "^4.0.0",
     "express-session": "^1.15.6",
     "nodemailer": "^2.3.0",
     "passport": "^0.4.0",
